# creep_modeling

./: .history-marker  LICENSE.txt  pyproject.toml  readme.txt
docs/: codebase_reference.md  material_parameters.md
lsevpfft/: LS-EVPFFT  makefile
lsevpfft/src/: IO_functions.f90  LS-EVPFFT.f90  fftw3.f03  fftw3.f90  fourier_functions.f90  global.f90  tensor_functions.f90  types.f90  various_functions.f90
utils/: calc_utils.py  calibrate.py  config.py  data_utils.py  io_utils.py  postprocess.py  run.py  run_manual.py  sweep_microstructures.py  write_fft.py
utils/plotting/: common.py  diagnostics.py  mechanical.py
utils/sim_cases/: __init__.py  creep.py  creep_calibration.py  srj.py  srj_calibration.py  tension.py
